--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "type": "module",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "multiformats": "^11.0.2"
+  }
 }
